# kit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Platform.cmake
doc/: code_style.md
include/kit/: endian.hpp  event.hpp  export.h  file.hpp  kit.h  list.hpp  mpsc_queue.hpp  plasma.hpp  shared_mem.hpp  spin_lock.hpp  system.hpp  thread.hpp  time.hpp  ts_helpers.h  types.h  version.h.in
scripts/: code_format.py  docker_build.sh  docker_create.sh  test_code_format.py
scripts/git_hooks/: pre-commit
src/: CMakeLists.txt  version.cpp
src/event/: event_linux.cpp  event_macos.cpp  event_win32.cpp
src/file/: file_linux.cpp  file_macos.cpp  file_win32.cpp
src/shared/: shared_linux.cpp  shared_macos.cpp  shared_win32.cpp
src/system/: system_linux.cpp  system_macos.cpp  system_win32.cpp
src/thread/: thread_linux.cpp  thread_macos.cpp  thread_win32.cpp
src/time/: time_linux.cpp  time_macos.cpp  time_win32.cpp
tests/: CMakeLists.txt  event_test.hpp  file_test.hpp  list_test.hpp  main.cpp  mpsc_queue_test.hpp  shared_test.hpp  spin_lock_test.hpp  thread_test.hpp
